argo/application-prevent-updates-project/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: application-prevent-updates-project
spec:
  steps:
  - name: step-01
    try:
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../application-prevent-updates-project.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-02-assert-1.yaml
  - name: step-03
    try:
    - apply:
        file: application.yaml
    - apply:
        file: application-update.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: application-bad-update.yaml
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: application-prevent-updates-project
